--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-theme-chalk": "^2.13.0",
+    "axios": "^0.19.0",
+    "expess": "^0.0.1-security",
+    "element-ui": "^2.13.0",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "video.js": "^7.6.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.1.3"
+    "vue-baidu-map": "^0.21.22",
+    "vue-router": "^3.1.3",
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -29,13 +37,10 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "element-ui": "^2.13.0",
+    "element-theme-chalk": "^2.13.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -49,20 +54,18 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.11.1",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^8.0.2",
-    "selenium-server": "^3.0.1",
+    "sass-loader": "^8.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
